# rust-webserver

./: Cargo.toml  README.md
.cargo/: config.toml
src/: error.rs  main.rs
src/web/: routes_login.rs
tests/: api_request.rs
