[package]
name = "webserver"
version = "0.1.0"
edition = "2021"

[workspace.lints.rust]
unsafe_code = "forbid"
unused = "allow" # For experimental dev.

[lints]
workspace = true

[dependencies]
axum = "0.7.7"
serde = {version = "1.0.214", features = ["derive"]}
serde_json = "1.0.132"
tokio = {version = "1.41.0", features = ["full"]}
tower-http = {version = "0.6.1", features = ["fs"]}


[dev-dependencies]
httpc-test = "0.1.10"
anyhow= "1"
